@@ -1,0 +1,6 @@
+#include "arg.ih"
+
+Arg::~Arg()
+{
+    delete d_ptr;
+}
