@@ -2,7 +2,7 @@ includefile(include/header)
 
 COMMENT(manpage, section, releasedate, archive, short name)
 manpage(FBB::A2x)(3bobcat)(_CurYrs_)(libbobcat-dev__CurVers_)
-                    (Error handler)
+                    (Text to X convertor)
 
 manpagename(FBB::A2x)(Objects performing ascii-to-x (anything) conversions)
 
