@@ -4,7 +4,7 @@ COMMENT(replace 'classname' by the name of the new class)
 
 COMMENT(manpage, section, releasedate, archive, short name)
 manpage(FBB::Classname)(3bobcat)(_CurYrs_)(libbobcat-dev__CurVers_-x.tar.gz)
-                    (Error handler)
+       (SHORT DESC.)
 
 manpagename(FBB::Classname)(shortdesc)
 
