@@ -10,7 +10,7 @@
 #define CXX                 "g++"
 
     // Check INSTALL.im for 'build' compiler options
-#define CXXFLAGS            "--std=c++2a " ${AUXFLAGS} " -Wall -O2" \
+#define CXXFLAGS            "--std=c++20 " ${AUXFLAGS} " -Wall -O2" \
                             " -fdiagnostics-color=never "
 
 // see pf_iterator/icmconf for an example using -system
