@@ -7,7 +7,7 @@
 #define USE_ECHO              ON
 #define IH                  ".ih"
 #define CXX                 "g++"
-#define CXXFLAGS            " --std=c++2a -Wall -O2 -I../tmp" \
+#define CXXFLAGS            " --std=c++20 -Wall -O2 -I../tmp" \
                                 " -fdiagnostics-color=never $EXTRAFLAGS"
 #define ADD_LIBRARIES       "bobcat"
 #define ADD_LIBRARY_PATHS   ""
